fixed some spacing

--- a/style.css
+++ b/style.css
@@ -9,14 +9,14 @@ body {
 
 .carousel {
   width: 100%;
-  height: 900px;
+  height: 500px;
   position: relative;
   top: 55px;
 }
 
 .carousel .other-content {
   position: absolute;
-  top: 350px;
+  top: 90px;
   left: 0;
   width: 100%;
   text-align: center;
